# QuickCHAT

./: .env  .gitignore  .travis.yml  Cargo.toml  LICENSE  openapi.yml
docs/: Makefile  authorization.rst  conf.py  index.rst  making_requests.rst  sessions.rst  users.rst
docs/_build/doctrees/: authorization.doctree  environment.pickle  index.doctree  making_requests.doctree
docs/_build/html/: .buildinfo  authorization.html  genindex.html  index.html  making_requests.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: authorization.rst.txt  index.rst.txt  making_requests.rst.txt
handler_macro/: Cargo.toml
handler_macro/src/: lib.rs
migrations/2018-08-29-095205_create_users/: up.sql
migrations/2018-08-29-113744_add_salt_to_users/: down.sql  up.sql
migrations/2018-10-29-152347_create_messages/: down.sql  up.sql
src/: main.rs  pool.rs  schema.rs  tests.rs
src/api/: messages.rs  mod.rs  sessions.rs  statuses.rs  users.rs
src/command/: listeners.rs  mod.rs
src/database/: mod.rs
src/database/model/: mod.rs
src/logic/: messages.rs  mod.rs  security.rs  user_management.rs
src/router/: guard.rs  index.rs  macros.rs  mod.rs  session.rs  user.rs
