[package]
name = "nullptr_chat_server"
version = "0.1.0"
authors = ["Rirush <raccoonrirush@gmail.com>"]

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
dotenv = "0.13.0"
diesel = { version = "1.3.2", features = ["postgres", "r2d2", "uuid"]}
uuid = ">= 0.2.0, < 0.5.0"
sha2 = "0.7.1"
rand = "0.5.5"
hex = "0.3.2"
