[package]
name = "nullptr_chat_server"
version = "0.1.0"
authors = ["Rirush <raccoonrirush@gmail.com>"]

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
rocket_contrib = { version = "0.3.16", features = ["json"] }
serde = "1.0.75"
serde_derive = "1.0.75"
dotenv = "0.13.0"
diesel = { version = "1.3.3", features = ["postgres", "r2d2", "uuid"]}
uuid = { version = "0.6.0", features = ["v4"]}
sha2 = "0.7.1"
rand = "0.5.5"
hex = "0.3.2"
regex = "1"
lazy_static = "1.1.0"
